src/Components/EnergyCalculator/Header/Header.css
.cesn-official-banner {
  width: 100%;
  background-color: #2b2b2b;
}

.cesn-official-banner-inner {
  display: flex;
  align-items: center;
  gap: 1.25rem;
  max-width: var(--main-max-width);
  margin: auto;
  padding: 0.5rem 1rem;
}

.cesn-header-logo {
  height: 1rem;
  width: auto;
}

.cesn-official-banner-text {
  color: #ffffff;
  font-family: var(--font-body);
  font-size: 0.75rem;
  white-space: nowrap;
}

@media (max-width: 767px) {
  .cesn-header-logo {
    height: 0.75rem;
  }

  .cesn-official-banner-text {
    font-size: 0.625rem;
  }

  .cesn-official-banner-inner {
    gap: 0.75rem;
  }
}

